// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:FormItem:validateApi:failed 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error is-required has-error--isRequired"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error has-error--isRequired cxd-TextControl is-focused"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:FormItem:validateApi:failed 2`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error is-required"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error cxd-TextControl is-focused"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value="123"
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              用户名已存在
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:FormItem:validateApi:success 1`] = `
<div>
  <div
    class="cxd-Panel cxd-Panel--default cxd-Panel--form"
    data-role="container"
  >
    <div
      class="cxd-Panel-heading"
    >
      <h3
        class="cxd-Panel-title"
      >
        <span
          class="cxd-TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="cxd-Panel-body"
    >
      <form
        class="cxd-Form cxd-Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="cxd-Form-item cxd-Form-item--normal is-error is-required has-error--isRequired"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="cxd-Form-label"
          >
            <span>
              <span
                class="cxd-TplField fr-view"
              >
                <span>
                  Label
                </span>
              </span>
              <span
                class="cxd-Form-star"
              >
                *
              </span>
            </span>
          </label>
          <div
            class="cxd-Form-control is-error has-error--isRequired cxd-TextControl is-focused"
          >
            <div
              class="cxd-TextControl-input"
            >
              <input
                autocomplete="off"
                class=""
                name="a"
                placeholder=""
                size="10"
                type="text"
                value=""
              />
            </div>
          </div>
          <ul
            class="cxd-Form-feedback"
          >
            <li>
              这是必填项
            </li>
          </ul>
        </div>
      </form>
    </div>
    <div
      class="cxd-Panel-footerWrap"
    >
      <div
        class="cxd-Panel-btnToolbar cxd-Panel-footer"
      >
        <button
          class="cxd-Button cxd-Button--default cxd-Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:FormItem:validateApi:success 2`] = `
{
  "a": "123",
}
`;
